--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio of [Your Name]</title>
+    <title>Portfolio of Hagen Carriere</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -37,19 +37,19 @@
 </head>
 <body>
 
-<h1>The Portfolio of [Your Name]</h1>
+<h1>The Portfolio of Hagen Carriere</h1>
 
 <h2>Projects</h2>
 
 <ul>
     <li>
-        <a href="[Link to your WebGL build or hosted game page]">[Project Title]</a>
+        <a href="https://hagenc.itch.io/zelda">p1-Zelda</a>
         <div class="project-description">
-            <strong>Description:</strong> [Brief description of the project.]
+            <strong>Description:</strong> Recreation of the first dungeon from the original Legend of Zelda game in Unity. Pressing 4 gives access to a custom dungeon.
             <br>
-            <strong>Contributions:</strong> [Describe your contributions here, e.g., "I developed the core AI system, worked on half of the enemies, and experimented with audio."]
+            <strong>Contributions:</strong> I developed the core weapon system, Link sprite behavior, the secret rooms, and the custom weapon and it's mechanics.
             <br>
-            <strong>Technologies Used:</strong> [List the technologies used, e.g., C#, Unity, etc.]
+            <strong>Technologies Used:</strong> C# and Unity
         </div>
     </li>
     <!-- <li>
