--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
             <strong>Technologies Used:</strong> C# and Unity
         </div>
     </li>
-    <!-- <li>
-        <a href="[Link to your WebGL build or hosted game page]">[Another Project Title]</a>
+    <li>
+        <a href="https://hagenc.itch.io/sliding-stars">Sliding Stars</a>
         <div class="project-description">
-            <strong>Description:</strong> [Brief description of the project.]
+            <strong>Description:</strong> A platforming game with a unique mechanic where the player can spawn a clone and swap loactions with it.
             <br>
-            <strong>Contributions:</strong> [Describe your contributions here.]
+            <strong>Contributions:</strong> I developed the game including: core mechanic, the level design, and the player sprite behavior.
             <br>
-            <strong>Technologies Used:</strong> [List the technologies used.]
+            <strong>Technologies Used:</strong> C# and Unity
         </div>
-    </li> -->
+    </li>
     <!-- Add more projects as needed -->
 </ul>
 
