--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
 
 <ul>
     <li>
+        <a href="https://landens.itch.io/card-king">Card King</a>
+        <div class="project-description">
+            <strong>Description:</strong> Deckbuilding adventure game, with a top down view. Battles are in real time with a recharging mana bar. Solo adventure with a side PvP mode.
+            <br>
+            <strong>Contributions:</strong> I developed the Cutscenes throughout the game as well as the scripted fights such as the tutorial and final boss.
+            <br>
+            <strong>Technologies Used:</strong> C# and Unity
+        </div>
+    </li>
+    <li>
         <a href="https://hagenc.itch.io/zelda">p1-Zelda</a>
         <div class="project-description">
             <strong>Description:</strong> Recreation of the first dungeon from the original Legend of Zelda game in Unity. Pressing 4 gives access to a custom dungeon.
