--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
 
 <ul>
     <li>
+        <a href="https://youtu.be/hMtL-WHkYCE">YouMadeIt Engine</a>
+        <div class="project-description">
+            <strong>Description:</strong> C++ game engine with lua as a guest language. 
+            <br>
+            <strong>Contributions:</strong> I developed the engine and used technologies such as SDL for window management, Box2D for physics, LuaBridge for lua integration, and Tiled for level design.
+            <br>
+            <strong>Technologies Used:</strong> C++, Lua, Tiled, GLM, LuaBridge, SDL, Box2D
+        </div>
+    </li>
+    <li>
         <a href="https://landens.itch.io/card-king">Card King</a>
         <div class="project-description">
             <strong>Description:</strong> Deckbuilding adventure game, with a top down view. Battles are in real time with a recharging mana bar. Solo adventure with a side PvP mode.
